--- a/Soko02/Soko02.csproj
+++ b/Soko02/Soko02.csproj
@@ -75,6 +75,7 @@
     <Content Include="images\face0.png" />
     <Content Include="images\face1.png" />
     <Content Include="input.js" />
+    <Content Include="map.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
