--- a/Soko02/Soko02.csproj
+++ b/Soko02/Soko02.csproj
@@ -71,9 +71,9 @@
     <Content Include="game.html" />
     <Content Include="game.js" />
     <Content Include="images\brick.png" />
-    <Content Include="images\egg.jpg" />
     <Content Include="images\face0.png" />
     <Content Include="images\face1.png" />
+    <Content Include="images\gold.png" />
     <Content Include="input.js" />
     <Content Include="map.js" />
     <Content Include="Web.config" />
