--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,16 @@
 
 # Build results
 
+*.dll
+
 [Dd]ebug/
 [Rr]elease/
 x64/
 build/
 [Bb]in/
 [Oo]bj/
-Soko01/bin
-Soko01/obj
+Soko01/bin/
+Soko01/obj/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
