--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,9 @@
 
 # Build results
 
+*.csproj.FileListAbsolute.txt
 *.dll
-
+*.
 [Dd]ebug/
 [Rr]elease/
 x64/
@@ -17,7 +18,10 @@ build/
 [Bb]in/
 [Oo]bj/
 Soko01/bin/
-Soko01/obj/
+Soko01\obj
+Soko01\obj\
+Soko01/obj/Debug/
+
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
